# FastData-Py

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  appmeta.json  main.spec  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/: help.css  index.html
examples/: help_system_demo.py
hooks/: hook-sktime.py
scripts/: FastDataSetup.iss  build-windows-installer.ps1  build_help_docs.py  release-windows.ps1  setup.ps1  setup.sh
src/: app.py  qt_compat.py
tests/: test_chat_sessions.py  test_data_selector_filter_routing.py  test_data_tab_import_scope.py  test_database.py  test_database_model_file_ops.py  test_database_model_prediction_save.py  test_database_model_selection.py  test_default_database_bootstrap.py  test_dimensionality_reduction_service.py  test_export_dialog.py  test_export_payload_builders.py  test_export_pipeline_roundtrip.py  test_feature_pipeline_perf.py  test_features_list_widget_selection.py  test_filters_widget_signals.py  test_filters_widget_viewmodel.py  test_forecasting_service.py  test_group_colors.py  test_help_system.py  test_hybrid_pandas_model_import_signals.py  test_imports.py  test_llm_providers.py  test_model_store.py  test_monthly_chart_empty_state.py  test_preprocessing_service.py  test_regression_colors.py  test_regression_service.py  test_regression_tab_stratify_options.py  test_regression_viewmodel.py  test_selection_settings_behavior.py  test_selection_settings_scope.py  test_selection_tab_defaults.py  test_selection_table_model.py  test_smoke.py  test_som_perf.py  (+3 more)
(+261 files in other folders)
